css update to fix <pre> sections on mobile devices

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -37,11 +37,17 @@ body{
     html{
         font-size:18px
     }
+    pre {
+        max-width: 600px;
+    }
 }
 
 @media screen and (max-width: 600px){
     html{
         font-size:17px
+    }
+    pre {
+        max-width: 300px;
     }
 }
 
